--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: CI
 
 on:
-  push:
-    branches: [ main, master, feature/** ]
+  #push:
+  #  branches: [ main, master, feature/** ]
   pull_request:
     branches: [ main, master ]
 
