DB接続情報を環境変数由来へ変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=batch-app
 
 # PostgreSQL DataSource Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/batchdb
-spring.datasource.username=batchuser
-spring.datasource.password=batchpass
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:batchdb}
+spring.datasource.username=${DB_USERNAME:batchuser}
+spring.datasource.password=${DB_PASSWORD:batchpass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # MyBatis Configuration
